# onyx

./: BOM.json  CICD.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  USER_EXPERIENCE.md  com.onyx.yt-frontend.desktop  com.onyx.yt-frontend.yml  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: bundle_flatpak.sh  bundle_macos.sh  bundle_windows.sh  generate_bom.py
src/: main.rs  messages.rs  tests.rs  types.rs
